syntax = "proto3";

import "google/protobuf/timestamp.proto";

package queryService;

option go_package = "./;queryService";

message User {
  string ID = 1;
  string Email = 2;
  string Username = 3;
  string Password = 4;
  bool   Root = 5;
  bool   Active = 6;
  google.protobuf.Timestamp CreatedAt = 7;
  google.protobuf.Timestamp UpdatedAt = 8;
}

message CreateUserReq {
  string ID = 1;
  string Email = 2;
  string Username = 3;
  string Password = 4;
  bool   Root = 5;
  bool   Active = 6;
}

message CreateUserRes {
  string ID = 1;
}

message UpdateUserReq {
  string ID = 1;
  string Email = 2;
  string Username = 3;
}

message UpdateUserRes {
  string ID = 1;
}

message GetUserByIdReq {
  string ID = 1;
}

message GetUserByIdRes {
  User User = 1;
}

message SearchReq {
  string Search = 1;
  int64 page = 2;
  int64 size = 3;
}

message SearchRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated User Users = 6;
}

message DeleteUserByIdReq {
  string ID = 1;
}

message DeleteUserByIdRes {}